Fix error after merge